<resources>
    <string name="app_name">InventoryApp</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="create_item_activity_toolbar">Create Product</string>
    <string name="picture">picture</string>
    <string name="name">NAME</string>
    <string name="DESCRIPTION">DESCRIPTION</string>
    <string name="price">PRICE</string>
    <string name="quantity">QUANTITY</string>
    <string name="enter_product_s_name">Enter product\'s name</string>
    <string name="enter_product_s_description">Enter product\'s description</string>
    <string name="enter_quantity">Enter quantity</string>
    <string name="save">SAVE</string>
    <string name="edit_item_activity_toolbar">Edit Product</string>
</resources>
