<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.AddProductActivity">

    <android.support.design.widget.AppBarLayout
        android:id="@+id/appBarLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:popupTheme="@style/AppTheme.PopupOverlay" />

    </android.support.design.widget.AppBarLayout>


    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/product_image"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="15dp"
        android:src="@drawable/main_default_image"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"

        app:layout_constraintTop_toBottomOf="@+id/appBarLayout" />

    <!--     name      -->

    <android.support.design.widget.TextInputLayout
        android:id="@+id/name_textInputLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:padding="5dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/product_image">

        <android.support.v7.widget.AppCompatEditText
            android:id="@+id/product_name_edittext"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/enter_product_s_name"
            android:inputType="text"
            android:textColor="@color/colorPrimary"
            android:textColorHint="@color/colorPrimary" />
    </android.support.design.widget.TextInputLayout>


    <!--     description      -->

    <android.support.design.widget.TextInputLayout
        android:id="@+id/desc_textInputLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:padding="5dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/name_textInputLayout">

        <android.support.v7.widget.AppCompatEditText
            android:id="@+id/product_desc_edittext"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/enter_product_s_description"
            android:inputType="text"
            android:textColor="@color/colorPrimary"
            android:textColorHint="@color/colorPrimary" />
    </android.support.design.widget.TextInputLayout>



    <!--     price      -->

    <android.support.design.widget.TextInputLayout
        android:id="@+id/price_textInputLayout"
        android:layout_width="180dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:padding="5dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/desc_textInputLayout">



        <android.support.v7.widget.AppCompatEditText
            android:id="@+id/product_price_edittext"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="4dp"
            android:hint="price"
            android:inputType="number"
            android:textColor="@color/colorPrimary"
            android:textColorHint="@color/colorPrimary"
            app:layout_constraintBottom_toBottomOf="@+id/price_image"
            app:layout_constraintStart_toEndOf="@+id/price_image"
            app:layout_constraintTop_toTopOf="@+id/price_image" />

    </android.support.design.widget.TextInputLayout>




    <!-- quantity -->

    <android.support.design.widget.TextInputLayout
        android:id="@+id/quantity_textInputLayout"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="0dp"
        android:padding="5dp"
        app:layout_constraintStart_toEndOf="@+id/price_textInputLayout"
        app:layout_constraintTop_toBottomOf="@+id/price_textInputLayout"
        app:layout_constraintBottom_toTopOf="@+id/price_textInputLayout"
        >

        <android.support.v7.widget.AppCompatEditText
            android:id="@+id/product_quantity_edittext"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/enter_quantity"
            android:inputType="number"
            android:textColor="@color/colorPrimary"
            android:textColorHint="@color/colorPrimary" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/change_image_fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginStart="65dp"
        android:layout_marginTop="65dp"
        android:src="@drawable/ic_camera_alt_black_24dp"
        app:layout_constraintStart_toStartOf="@+id/product_image"
        app:layout_constraintTop_toTopOf="@+id/product_image" />

    <Button
        android:id="@+id/save_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="30dp"
        android:text="UPDATE"
        app:layout_constraintTop_toBottomOf="@id/quantity_textInputLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:background="@color/colorAccent"
        android:textColor="@android:color/white"/>


</android.support.constraint.ConstraintLayout>